inputs and styles of the milk production

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="dairy.js">
     <title>Dairy Business</title>
 </head>
 <body>
@@ -13,7 +12,7 @@
     <h1>Farm Records.</h1>
 </header>
 <section class="intro">
-    <h2>Introduction.</h2>
+    <h2><u>Introduction.</u> </h2>
     <p>Since we took up this tender
         I, and my company are looking towards making the production
         and data collection more seemless thus the introduction of technology
@@ -21,7 +20,11 @@
         and this is all digised as shown below.
     </p>
 </section>
-<h2><strong>Data.</strong></h2>
+<h2><strong><u>Data.</u> </strong></h2>
 
 </body>
+
+<script>
+       
+</script>
 </html>
