classes input for better styling

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         and this is all digised as shown below.
     </p>
 </section>
+<section class="data">
 <h2><strong><u>Data.</u> </strong></h2>
+<p>The productionper week is as follows:</p>
+</section>
 
 </body>
-
 <script>
        
 </script>
